<resources>
    <string name="app_name">Typing Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">type...</string>
    <string name="typing_tracker">Typing Tracker</string>
    <string name="correct_characters">Correct Characters</string>
    <string name="wrong_characters">Wrong Characters</string>
    <string name="accuracy">Accuracy</string>
    <string name="wpm">WPM</string>
    <string name="statistics">Statistics</string>
    <string name="again">Again</string>
    <string name="key_strokes">key Strokes</string>


    <string-array name="levels">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>

</resources>