<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.typing_tracker.ui.home.dialog.GameDialogModelView" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rounded_dialog"
        android:paddingTop="@dimen/padding_normal"
        android:paddingBottom="24dp">


        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="00:00"
            android:textAllCaps="true"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_key_strokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="180dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="keyStrokes"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/key_strokes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time" />

        <TextView
            android:id="@+id/key_strokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@{String.valueOf(viewModel.lastGame.keyStrokes)}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time"
            tools:text="33" />

        <TextView
            android:id="@+id/text_correct_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/correct_characters"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text_key_strokes"
            app:layout_constraintTop_toBottomOf="@+id/text_key_strokes" />

        <TextView
            android:id="@+id/correct_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@{String.valueOf(viewModel.lastGame.correctCharacters)}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/key_strokes"
            app:layout_constraintTop_toBottomOf="@+id/key_strokes"
            tools:text="33" />

        <TextView
            android:id="@+id/text_wrong_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/wrong_characters"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text_correct_characters"
            app:layout_constraintTop_toBottomOf="@+id/text_correct_characters" />


        <TextView
            android:id="@+id/wrong_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@{String.valueOf(viewModel.lastGame.wrongCharacters)}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/correct_characters"
            app:layout_constraintTop_toBottomOf="@+id/correct_characters"
            tools:text="33" />

        <TextView
            android:id="@+id/text_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/accuracy"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text_wrong_characters"
            app:layout_constraintTop_toBottomOf="@+id/text_wrong_characters" />

        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text='@{String.valueOf(viewModel.lastGame.accuracy) + "%"}'
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/wrong_characters"
            app:layout_constraintTop_toBottomOf="@+id/wrong_characters"
            tools:text="33" />

        <TextView
            android:id="@+id/text_wpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/wpm"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text_accuracy"
            app:layout_constraintTop_toBottomOf="@+id/text_accuracy" />


        <TextView
            android:id="@+id/wpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@{String.valueOf(viewModel.lastGame.wpm)}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/accuracy"
            app:layout_constraintTop_toBottomOf="@+id/accuracy"
            tools:text="33" />


        <Button
            android:id="@+id/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rounded_dialog"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="@{() -> viewModel.onClickedAgain()}"
            android:text="@string/again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_wpm" />

        <TextView
            android:id="@+id/follow_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> viewModel.onClickedStatistics()}"
            android:text="@string/statistics"
            app:layout_constraintEnd_toEndOf="@+id/main_button"
            app:layout_constraintStart_toStartOf="@+id/main_button"
            app:layout_constraintTop_toBottomOf="@+id/main_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>